# gradfield

./: README.md  gradfield_output.html  pyproject.toml
.github/workflows/: publish.yml
examples/: example_numpy.py  example_torch_model.py  rosenbrock.html
src/gradfield/: __init__.py  cli.py  notebook.py  optimize.py  renderer.py  sampler.py  torch_adapter.py
src/gradfield.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_gradfield.py
