[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "gradfield"
version = "0.5.0"
description = "Gradient field & loss landscape visualizer — interactive 3D plots for any Python function or PyTorch model, with built-in optimizers and CLI"readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Aman Mukati", email = "amanmukati@yahoo.com" }]
keywords = ["machine-learning", "visualization", "loss-landscape", "pytorch", "gradient"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "plotly>=5.0",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev   = ["pytest", "build", "twine"]

[project.urls]
Homepage   = "https://github.com/amanmukati09/gradfield"
Repository = "https://github.com/amanmukati09/gradfield"
Issues     = "https://github.com/amanmukati09/gradfield/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
gradfield = "gradfield.cli:main"